test/reject/05-wrong_parameter.imgine
// Wrong parameter for union()

image image1 = image("path");

filter f = filter("random string");

for im in set(image1, image("path2"), image("path3")) {
    im.apply(f);
    im.union(image1, height=12.0);
    im.save();
}